<resources>
    <string name="app_name">Barkr</string>
    <string name="login">Login</string>
    <string name="create_new_account">create new account</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Match Pets</string>
    <string name="your_threads">Your Threads</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>

    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <string name="hello_world">hello word</string>
    <string name="add_pet">Add a pet</string>
    <string name="pet_name">pet name</string>
    <string name="okButton">submit</string>
    <string name="breed">breed</string>
    <string name="birthdate">birthdate</string>
    <string name="gender">gender</string>
    <string name="description">description</string>
    <string name="titleET">program title</string>
    <string name="locationET">location</string>
    <string name="participantsET">participants</string>
    <string name="descriptionET">description</string>
    <string name="starttimeET">start time</string>
    <string name="endtimeT">end time</string>
    <string name="dateET">date</string>
    <string name="breedTV">Breed</string>
    <string name="birthdateTV">Birthdate</string>
    <string name="genderTV">Gender</string>
    <string name="petdescTV">Description</string>
    <string name="title">title</string>
    <string name="location">location</string>
    <string name="cancel">cancel</string>
    <string name="submit">submit</string>
    <string name="register">Register</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="email_address">email address</string>>
    <string name="last_name">last name</string>
    <string name="first_name">first name</string>
    <string name="image">image</string>
    <string name="title_activity_example_extra_navigation">ExampleExtraNavigation</string>
    <string name="search_programs">Search programs...</string>
    <string name="delete">Delete</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>


</resources>
